--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Mahdi Hijazi
     - name: Date of Birth
-      value: 14th March 1879
+      value: 19th August 1993
     - name: Languages
-      value: English, German
+      value: Arabic, English, French
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: EPFL, Lausanne, Switzerland
+      year: 2024
       description:
         - Description 1.
         - Description 2.
@@ -21,9 +21,9 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: MSc
+      institution: EPFL, Lausanne, Switzerland
+      year: 2018
       description:
         - Description 1.
         - Description 2.
