--- a/_config.yml
+++ b/_config.yml
@@ -314,8 +314,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Hijazi]
+  first_name: [Mahdi, M.]
 
   style: apa
   locale: en
